tests/type_errors/record_where_int_expected.nos
# expect_error: incompatible types
# Test: passing record where Int is expected

type Point = { x: Int, y: Int }

double(n: Int) = n * 2

main() = {
    p = Point(1, 2)
    double(p)
}
